update files to make generic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,29 +8,29 @@
 <body>
   <!-- ============ MAIN ============ -->
   <main>
-    <!-- Sort the array of pokemons by using the key:name value -->
-    <%pokemons.sort((a, b)=> (a.name > b.name) ? 1 : -1)%>
+    <!-- Sort the array of ***** by using the key:name value -->
+    <%*****.sort((a, b)=> (a.name > b.name) ? 1 : -1)%>
       <div class="h1Cont">
-        <h1>Pokemons</h1>
+        <h1>*****</h1>
         <!-- NEW -->
-        <a id="newPoke" class="waves-effect waves-light btn-large" href="/pokemons/new">New Pokemon</a>
+        <a id="new" class="waves-effect waves-light btn-large" href="/*****/new">New *****</a>
         <br />
       </div>
       <div class="container1">
-        <% for(let i=0; i < pokemons.length; i++) { %>
+        <% for(let i=0; i < *****.length; i++) { %>
           <div>
-            <a href="/pokemons/<%=i%>">
-              <img src=<%=pokemons[i].img%> class="thumbnail"/></a>
+            <a href="/*****/<%=i%>">
+              <img src=<%=*****[i].img%> class="thumbnail"/></a>
 
             <!--- DELETE BUTTON --->
             <div class="form">
-              <form action="/pokemons/<%=i%>?_method=DELETE" method="POST">
-                <%= pokemons[i].name %>
+              <form action="/*****/<%=i%>?_method=DELETE" method="POST">
+                <%= *****[i].name %>
                   </br>
                   <div container="buttons">
                     <input type="submit" value="Delete" class="waves-effect waves-light btn-small" />
                     <!---- EDIT ---->
-                    <a id="editBut" href="/pokemons/<%=i%>/edit" class="waves-effect waves-light btn-small">edit</a>
+                    <a id="editBut" href="/*****/<%=i%>/edit" class="waves-effect waves-light btn-small">edit</a>
                   </div>
               </form>
             </div>
