--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,32 +7,32 @@
 
 <body>
   <!-- ============ MAIN ============ -->
-  <h1>New Pokemon
+  <h1>New *****
   </h1>
   <main>
-    <form action="/pokemons" method="POST">
+    <form action="/*****" method="POST">
 
       <!-- Name -->
-      <label for="pokemonName">Pokemon Name</label>
-      <input class="u-full-width" type="text" placeholder="Pokemon Name" name="name">
+      <label for="*****Name">***** Name</label>
+      <input class="u-full-width" type="text" placeholder="***** Name" name="name">
 
       <!-- Image URL -->
-      <label for="pokemonImgUrl">Image Source URL</label>
+      <label for="*****ImgUrl">Image Source URL</label>
       <input type="url" class="u-full-width" placeholder="image source" name="img">
 
       <h5 id="form">Type</h5>
 
       <!-- Type -->
       <!-- Type 1 -->
-      <label for="pokemonType">Type 1</label>
+      <label for="*****Type">Type 1</label>
       <input class="u-full-width" type="text" placeholder="Grass" name="type0">
 
       <!-- Type 2 -->
-      <label for="pokemonType">Type 2</label>
+      <label for="*****Type">Type 2</label>
       <input class="u-full-width" type="text" placeholder="Poison" name="type1">
 
       <!-- Type 3 -->
-      <label for="pokemonType">Type 3</label>
+      <label for="*****Type">Type 3</label>
       <input class="u-full-width" type="text" placeholder="Fire" name="type2">
       <h5 id="form">Stats</h5>
 
@@ -50,7 +50,7 @@
 
       <!-- Cancel & Submit buttons -->
       <input class="waves-effect waves-light btn-small" type="submit" value="Submit">
-      <a id="returnIndex" class="waves-effect waves-light btn-small" href="/pokemons">Cancel</a><br />
+      <a id="returnIndex" class="waves-effect waves-light btn-small" href="/*****">Cancel</a><br />
     </form>
   </main>
 </body>
